--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,19 +1,154 @@
-header {
+$color-primary-red: hsl(7, 99%, 70%);
+$color-primary-yellow: hsla(51, 100%, 49%, 0.856);
+$color-primary-cyan: hsl(167, 40%, 24%);
+$color-primary-darkblue: hsl(198, 62%, 26%);
+$color-primary-darkcyan: hsl(168, 34%, 41%);
+
+$color-neutral-darkblue: hsl(212, 27%, 19%);
+$color-neutral-grayishblue: hsl(213, 9%, 39%);
+$color-neutral-darkgrayishblue: hsl(232, 10%, 55%);
+$color-neutral-grayishblue: hsl(210, 4%, 67%);
+$color-neutral-white: hsl(0, 0%, 100%);
+
+$font-primay: "Barlow", sans-serif;
+$font-secondary: "Fraunces", sans-serif;
+
+*,
+*::after,
+*::before {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html {
+}
+
+body {
+  width: 100%;
+  font-family: "Barlow", sans-serif;
+  font-weight: 600;
+}
+
+.header {
+  background: url("/images/desktop/image-header.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  position: relative;
+  // min-width: 100%;
+  // max-height: auto;
+  // min-height: 100%;
+  height: 100vh;
+
   nav.top {
     height: 10vh;
-    background-color: aqua;
+
     display: flex;
     justify-content: space-between;
     align-items: center;
-    h2 {
-      color: white;
+
+    // .top--menu.active > * {
+    //   margin-right: 0.8rem;
+    // }
+
+    .header--logo {
+      margin-left: 20px;
     }
-    .top--menu.active > * {
-      margin-right: 0.8rem;
-    }
+
     .top--menu.active a {
       text-decoration: none;
       color: #fff;
     }
+
+    .top--menu.active {
+      background-color: khaki;
+      .btn_nav {
+        border-radius: 100px;
+        border: 0;
+        padding: 0.2rem 0.4rem;
+      }
+    }
+
+    .nav__list {
+      list-style: none;
+    }
+  }
+
+  h1 {
+    color: white;
+    text-align: center;
+    text-transform: uppercase;
+    margin-top: 100px;
+    font-family: $font-secondary;
+    font-size: 2.5rem;
+  }
+
+  .header--arrow {
+    margin: 100px auto 0px auto;
+    width: 20px;
   }
 }
+
+main {
+  section.photo-text {
+    .photo-container {
+      width: 100%;
+
+      .section--photo {
+        max-width: 100%;
+        max-height: 100%;
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
+      }
+    }
+    .text-container {
+      height: 300px;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-evenly;
+      align-items: center;
+      .title {
+        font-family: $font-secondary;
+        color: $color-neutral-darkblue;
+      }
+      .description {
+        font-family: $font-secondary;
+        text-align: center;
+        color: $color-neutral-grayishblue;
+      }
+      .learn-more {
+        text-decoration: none;
+        color: $color-neutral-darkblue;
+        text-transform: uppercase;
+        font-size: 1.5rem;
+        position: relative;
+
+        &::after {
+          position: absolute;
+          top: 20px;
+          display: block;
+          content: "";
+          width: 100%;
+          height: 12px;
+          background-color: $color-primary-yellow;
+          z-index: -1;
+          border-radius: 5px;
+          opacity: 0;
+        }
+        &:hover::after {
+          opacity: 1;
+        }
+      }
+    }
+  }
+}
+
+// @media (max-width: 480px) {
+//   header {
+//     .header--arrow {
+//       background-size: contain;
+//     }
+//   }
+// }
