--- a/scss/mobile.scss
+++ b/scss/mobile.scss
@@ -1,5 +1,12 @@
-@media (max-width: 375px) {
+@media (max-width: 750px) {
   .top--menu.active {
     background-color: lawngreen;
+  }
+
+  main {
+    .grid-container {
+      display: grid;
+      grid-template-columns: 1fr;
+    }
   }
 }
