--- a/scss/main.scss
+++ b/scss/main.scss
@@ -21,9 +21,6 @@ $font-secondary: "Fraunces", sans-serif;
   box-sizing: border-box;
 }
 
-html {
-}
-
 body {
   width: 100%;
   font-family: "Barlow", sans-serif;
@@ -140,6 +137,35 @@ main {
         &:hover::after {
           opacity: 1;
         }
+      }
+    }
+    .disclaimer {
+      &.cherry {
+        background: url("/images/mobile/image-graphic-design.jpg");
+        background-size: cover;
+        background-repeat: no-repeat;
+        max-width: 100%;
+        height: 90vh;
+        // display: flex;
+        // align-content: flex-end;
+
+        .text {
+          border: 2px solid red;
+          color: $color-primary-cyan;
+          h2 {
+            text-align: center;
+            font-family: $font-secondary;
+          }
+          p {
+            font-family: $font-secondary;
+            text-align: center;
+          }
+        }
+      }
+      &.orange {
+        background: url("/images/mobile/image-photography.jpg");
+        background-size: cover;
+        height: 90vh;
       }
     }
   }
