--- a/scss/main.scss
+++ b/scss/main.scss
@@ -107,6 +107,7 @@ main {
       justify-content: space-evenly;
       align-items: center;
       .title {
+        text-align: center;
         font-family: $font-secondary;
         color: $color-neutral-darkblue;
       }
@@ -140,33 +141,143 @@ main {
       }
     }
     .disclaimer {
+      position: relative;
       &.cherry {
         background: url("/images/mobile/image-graphic-design.jpg");
         background-size: cover;
         background-repeat: no-repeat;
         max-width: 100%;
         height: 90vh;
-        // display: flex;
-        // align-content: flex-end;
+      }
+      // align-content: flex-end;
+      .text-wrapper {
+        position: absolute;
+        bottom: 10%;
+      }
+      .text {
+        // position: absolute;
+        // bottom: 10%;
 
-        .text {
-          border: 2px solid red;
-          color: $color-primary-cyan;
-          h2 {
-            text-align: center;
-            font-family: $font-secondary;
-          }
-          p {
-            font-family: $font-secondary;
-            text-align: center;
-          }
+        width: 90%;
+        margin: 0 auto;
+
+        color: $color-primary-cyan;
+        h2 {
+          font-size: 1.8rem;
+          text-align: center;
+          font-family: $font-secondary;
+        }
+        p {
+          margin-top: 10px;
+          font-family: $font-secondary;
+          text-align: center;
         }
       }
+
       &.orange {
         background: url("/images/mobile/image-photography.jpg");
         background-size: cover;
         height: 90vh;
       }
+    }
+  }
+
+  .reviews {
+    h2 {
+      font-family: $font-secondary;
+      font-size: 1.5rem;
+      text-align: center;
+      padding: 50px 0;
+      text-transform: uppercase;
+      color: $color-neutral-grayishblue;
+      letter-spacing: 0.2rem;
+    }
+    .review {
+      width: 90%;
+      margin: 0 auto 50px auto;
+
+      p {
+        margin-top: 0.5rem;
+        color: $color-primary-cyan;
+        font-family: $font-secondary;
+        text-align: center;
+      }
+      .photo {
+        img {
+          display: block;
+          margin: 0 auto;
+          border-radius: 50%;
+          max-width: 100%;
+          width: 30%;
+          height: 30%;
+        }
+      }
+      .name {
+        margin-top: 1rem;
+        display: block;
+
+        text-align: center;
+        font-family: $font-secondary;
+      }
+      .title {
+        margin-top: 1rem;
+        display: block;
+        text-align: center;
+        font-family: $font-secondary;
+        color: $color-neutral-grayishblue;
+      }
+    }
+  }
+  .photos--grid {
+    width: 100vw;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+
+    .gridphoto {
+      img {
+        max-width: 100%;
+
+        background-size: cover;
+        background-repeat: no-repeat;
+      }
+    }
+  }
+}
+
+footer {
+  height: 50vh;
+  background-color: $color-primary-darkcyan;
+  .footer--logo {
+    img {
+      display: block;
+      fill: $color-primary-darkcyan;
+      margin: 0 auto;
+      padding-top: 5rem;
+    }
+  }
+  .links {
+    margin-top: 2rem;
+    display: flex;
+    justify-content: space-evenly;
+
+    list-style: none;
+    .link {
+      font-family: $font-secondary;
+      color: $color-primary-cyan;
+      font-size: 1.2rem;
+    }
+  }
+  .small--logos {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    margin-top: 5rem;
+    width: 60%;
+    margin: 5rem auto 0 auto;
+    img {
+      // margin-left: 1rem;
+      max-width: 100%;
     }
   }
 }
